--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "zensolutions",
-  "version": "1.0.0",
-  "description": "Site institucional",
-  "main": "index.html",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/atiladelcanton/zensolutions.git"
+  "dependencies": {
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9",
+    "testing-library": "^0.0.2"
   },
-  "author": "ZenSolutions",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/atiladelcanton/zensolutions/issues"
-  },
-  "homepage": "https://github.com/atiladelcanton/zensolutions#readme",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.1.0",
-    "node-sass": "^5.0.0"
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
+    "babel-jest": "^27.5.1",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "4.6.2"
   }
 }
